# SpdlogDeadlock

./: CMakeLists.txt  defaultlogger.h  logger_includes.h  main.cpp
